# worker-pool

./: Cargo.toml
src/: main.rs
src/shared/: tasks.rs
src/worker/: error.rs  types.rs
